<resources>
    <string name="app_name">Come Back</string>
    <string name="title_home">Accueil</string>
    <string name="title_search">Recherche</string>
    <string name="title_post">Publication</string>
    <string name="title_discussions">Discussions</string>
    <string name="title_my_account">Mon compte</string>
    <string name="login">Connexion</string>
    <string name="name">Nom et Prénom</string>
    <string name="email">Email</string>
    <string name="email_facultatif">Email (facultatif)</string>
    <string name="password">Mot de passe</string>
    <string name="current_password">Mot de passe (obligatoire)</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe (facultatif)</string>
    <string name="tab_my_acc_0">Moi</string>
    <string name="tab_my_acc_1">Inforamtions</string>
    <string name="tab_my_acc_2">Mes publications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Messagerie">Scaledrone chat</string>
    <string name="input_placeholder">Write a message</string>
    <string name="verification_contact">Verification avant contact</string>
    <string name="annuler">Annuler</string>
    <string name="contacter">Contacter</string>
    <string name="confirm">Valider</string>
    <string name="votre_objet">Etes-vous sûr que c\'est votre objet ?</string>
    <string name="delete_item">Voulez-vous vraiment supprimer l\'annonce ?</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="username">Nom d\'utilisateur (facultatif)</string>
    <string name="confirmer">Confirmer</string>
    <string name="verification_suppression">Suppression compte</string>
    <string name="verification_suppression_message">Voulez-vous vraiment supprimer votre compte ?\n\n<b>Attention</b>, toutes vos publications seront supprimées.</string>
    <string name="my_account_welcome">Bienvenue sur votre profil !</string>
    <string name="my_account_welcome_message">Nous sommes ravi de vous voir parmi nous.</string>
    <string name="my_account_new_user_message">Vous êtes connecté et avez la possibilité de poster des publications et d\'échanger avec les autres utilisateurs.</string>
    <string name="my_account_information_message">Vous pouvez naviguer entre les différents onglets de votre compte afin de pouvoir modiifer votre compte ou de voir vos posts. Si vous le souhaitez, vous pouvez directement supprimer certaines de vos annonces en cliquant dessus.</string>
    <string name="my_account_information_message_v2">Vous pouvez retrouver deux onglets principaux </string>
    <string name="disconnect">Déconnexion</string>
    <string name="search">Search</string>
    <string name="search_a_place">Search a Place</string>
    <string name="suppression_post">Supression publication</string>
    <string name="verification_suppression_post">Vouulez-vous vraiment supprimer cette publication ?</string>
    <string name="my_account_no_post">Vous n\'avez pas de publication en ligne.</string>
    <string name="my_account_no_post_descr">Vous pouvez en créer une en cliquant sur le + dans la barre de navigation !</string>
    <string name="fragment_home_Information">Cette page permet de retrouver des objets perdu selon la période choisi. \nLa recherche se base sur votre localisation.</string>
    <string name="Dialogue_name_filter">Filtre</string>
    <string name="Dialogue_button_name_filter">Valider</string>
    <string name="Rien">Rien</string>
    <string name="rayon">Rayon</string>
    <string name="valeur_rayon">0</string>
    <string name="rayon_km">km</string>
    <string name="_1_jour">1 Jour</string>
    <string name="_3_jours">3 jours</string>
    <string name="_7_jours">7 jours</string>
    <string name="don_t_have_an_account">Pas de compte ?</string>
    <string name="log_in">Connexion</string>
    <string name="register">Inscription</string>
    <string name="valider_les_modifications">Valider les modifications</string>
    <string name="password_here">Mot de passe</string>
    <string name="current_password_here">Mot de passe actuel</string>
    <string name="new_password_here">Nouveau mot de passe</string>
    <string name="monnom_monprenom">MonNom MonPrenom</string>
    <string name="quand_l_avez_vous_trouv">Quand l\'avez vous trouvé?</string>
    <string name="description_bri_ve">Description briève..</string>
    <string name="ex_blanc_avec_un_collier_rouge">Ex: Blanc avec un collier rouge...</string>
    <string name="ex_blanc_l_g_rement_ray_sur_le_bord">Ex: Blanc, légèrement rayé sur le bord...</string>
    <string name="de_quel_animal_s_agit_il">De quel animal s\'agit-il ?</string>
    <string name="chien_hamster_etc">Chien, hamster... etc</string>
    <string name="race">Race ?</string>
    <string name="caniche_chiwawa_etc">Caniche, chiwawa... etc</string>
    <string name="o_l_avez_vous_trouv">Où l\'avez vous trouvé?</string>
    <string name="_0">0</string>
    <string name="km">km</string>
    <string name="publier">Publier</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="quel_est_la_nature_de_ce_que_vous_avez_trouv">Quel est la nature de ce que vous avez trouvé?</string>
    <string name="animal">Animal</string>
    <string name="objet">Objet</string>
    <string name="cliquez_pour_prendre_une_photo">Cliquez pour prendre une photo</string>
    <string name="quel_est_l_objet">Quel est l\'objet ?</string>
    <string name="montre_t_l_phone_etc">Montre, téléphone... etc</string>
    <string name="mod_le_marque">Modèle, marque ?</string>
    <string name="iphone_4_rolex_etc">Iphone 4, Rolex... etc</string>
    <string name="rechercher">Rechercher</string>
    <string name="titre">Titre</string>
    <string name="lieu">Lieu</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="string_titre">Titre</string>
    <string name="titreobjet">TitreObjet</string>
    <string name="namepersonne">NamePersonne :</string>
    <string name="derni_re_phrase">Dernière phrase</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
</resources>