<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/my_account_informations"
        android:layout_height="440dp"
        android:layout_width="300dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_textedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MonNom MonPrenom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_textedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_textedit"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="Password Here" />

        <Button
            android:id="@+id/update_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Valider les modifications" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>