<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/my_account_cardView_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="80dp">

            <ImageView
                android:id="@+id/my_account_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@mipmap/ic_launcher"
                android:src="@drawable/ic_account_circle_black_36dp"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"/>

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical"-->
<!--            android:padding="16dp">-->

<!--        <Button-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:id="@+id/my_account_take_pic"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Take Photo"/>-->

        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"/>
<!--        </LinearLayout>-->
    </LinearLayout>

</RelativeLayout>