<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80E0E0E0"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp"
            app:cardCornerRadius="5dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewArticle"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@mipmap/ic_launcher"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#4DECECEC"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="#FFFFFF"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/itemTitreObjectArticle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/string_titre" />

                        <TextView
                            android:id="@+id/itemLastMessageArticle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/lieu" />

                        <TextView
                            android:id="@+id/itemNameArticle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/date" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/itemDescriptionArticle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:background="#FFFFFF"
                            android:paddingLeft="10dp"
                            android:text="@string/description" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>