<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_account.MyAccountFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:paddingTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/logintext"/>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/general_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logintext">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text_post"
            android:gravity="top"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:includeFontPadding="true"
            android:padding="10dp"
            android:paddingHorizontal="5dp"
            android:textColor="#7A7A7A"
            android:textColorHighlight="#E8E8E8"
            android:textColorHint="#787878"
            android:textColorLink="#6C6C6C"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_edit_text_post"
            android:gravity="top"
            android:hint="@string/password"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingHorizontal="5dp"
            android:textColor="#7A7A7A"
            android:textColorHighlight="#E8E8E8"
            android:textColorHint="#787878"
            android:textColorLink="#6C6C6C"
            android:textCursorDrawable="@drawable/cursor_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account ?" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Register"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:padding="0dp"
            android:backgroundTint="#FFFFFF"/>

        </LinearLayout>

        <Button
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="#3F51B5"
            android:text="Log In" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>