<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.PostFragmentDescriptionAnimal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/post_gradient_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/post_border_custom"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:progressTint="#FFC107" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/text_description_animal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/description_bri_ve"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/textDescriptionAnimal"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/background_edit_text_post"
                        android:gravity="top"
                        android:hint="@string/ex_blanc_avec_un_collier_rouge"
                        android:includeFontPadding="true"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:paddingHorizontal="5dp"
                        android:textColor="#7A7A7A"
                        android:textColorHighlight="#E8E8E8"
                        android:textColorHint="#787878"
                        android:textColorLink="#6C6C6C"
                        android:textCursorDrawable="@drawable/cursor_color"
                        tools:ignore="TextContrastCheck"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButtonprevdescriptionAnimal"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/round_button"
                        android:contentDescription="@string/Rien"
                        android:src="@drawable/ic_action_arrows_left"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <ImageButton
                        android:id="@+id/imageButtonnextdescriptionAnimal"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/round_button"
                        android:contentDescription="@string/Rien"
                        android:src="@drawable/ic_action_arrows_right"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>